--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 import java.time.LocalDateTime
 import java.time.ZoneId
 import java.time.format.DateTimeFormatter
@@ -27,6 +25,9 @@ configurations {
     compile.extendsFrom(bundle)
 }
 
+version = LocalDateTime.now(ZoneId.of("America/Chicago")).format(DateTimeFormatter.ofPattern("yyMMddHHmm"))
+
+
 repositories {
     mavenCentral()
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
@@ -37,51 +38,12 @@ dependencies {
     compile "org.spigotmc:spigot-api:1.13.1-R0.1-SNAPSHOT"
 }
 
-version = LocalDateTime.now(ZoneId.of("America/Chicago")).format(DateTimeFormatter.ofPattern("yyMMddHHmm"))
-
-sourceSets.main.java.srcDirs = project.projectDir.listFiles(new FileFilter() {
-    @Override
-    boolean accept(File pathname) {
-        return pathname.name.split("/").last().startsWith("src")
-    }
-}).toList()
+jar {
+    baseName = "${project.name}.jar"
+    version = rootProject?.version ?: project.version
+    destinationDir = rootProject?.distFolder ?: project.distFolder
+}
 
 new File("dist").deleteDir()
 
-sourceSets.main.java.srcDirs.each {
-    tasks.create(it.name.split("/").last(), Copy) {
-        from project.file(it.name.split("/").last())
-        into project.file("build/merged")
-    }
-}
-
-
-task compile(type: JavaCompile) {
-    dependsOn = project.tasks.withType(Copy)
-    destinationDir = project.file("build/bin")
-    source "build/merged"
-    sourceCompatibility = 1.8
-
-    classpath = project.configurations[name]
-}
-
-task copy(type: Copy) {
-    from project.file("resources")
-    include "**${File.separator}*.yml"
-    expand(project.properties)
-    into project.file("build/bin")
-}
-
-task dist(type: ShadowJar) {
-    dependsOn = [
-            "copy",
-            "compile",
-    ]
-    archiveName = "${project.name} - ${project.version}.jar"
-    destinationDir = rootProject?.distFolder ?: project.distFolder
-    from "build/bin"
-    try {
-        from project.configurations.bundle
-    } catch (ignored) {
-    }
-}
+build.dependsOn = ['jar']
