--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ repositories {
 
 dependencies {
     compile "org.spigotmc:spigot-api:1.13.1-R0.1-SNAPSHOT"
+    compile "com.google.code.findbugs:jsr305:3.0.0"
 }
 
 jar {
