--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: AutomaticInventory
 main: me.ryanhamshire.AutomaticInventory.AutomaticInventory
-version: 2.7.1
+version: ${project.version}
 api-version: 1.13
 commands:
   debugai:
